# lidar_img_syn_ros

aruco_mapping/data/: aoni.ini  aoni2.ini  aoni3.ini  aoni4.ini  aoni5.ini  logitech.ini
aruco_mapping/launch/: aruco_mapping.launch
aruco_mapping/src/: aruco_mapping.cpp
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/msg/: marker_6dof.msg
beginner_tutorials/src/: listener.cpp
lidar_camera_calibration/conf/: config_file.txt  lidar_camera_calibration.yaml  marker_coordinates.txt  points.txt  transform.txt
lidar_camera_calibration/include/lidar_camera_calibration/: Find_RT.h  PreprocessUtils.h
lidar_camera_calibration/log/: avg_values.txt
